# cookiecutter-flask-restful

./: README.md  cookiecutter.json
hooks/: post_gen_project.py
{{cookiecutter.app_name}}/: .secrets.toml  Dockerfile  LICENSE  Makefile  docker-compose.yml  pyproject.toml  settings.toml  worker.py
{{cookiecutter.app_name}}/tests/: test_{{cookiecutter.app_name}}.py
{{cookiecutter.app_name}}/{{cookiecutter.app_name}}/: app.py
{{cookiecutter.app_name}}/{{cookiecutter.app_name}}/ext/admin/: __init__.py  admin.py
{{cookiecutter.app_name}}/{{cookiecutter.app_name}}/ext/api/: __init__.py
{{cookiecutter.app_name}}/{{cookiecutter.app_name}}/ext/api/blueprints/: __init__.py
{{cookiecutter.app_name}}/{{cookiecutter.app_name}}/ext/auth/: models.py
{{cookiecutter.app_name}}/{{cookiecutter.app_name}}/ext/celery/: __init__.py  celery.py
{{cookiecutter.app_name}}/{{cookiecutter.app_name}}/ext/cli/: __init__.py
{{cookiecutter.app_name}}/{{cookiecutter.app_name}}/ext/cors/: __init__.py
{{cookiecutter.app_name}}/{{cookiecutter.app_name}}/ext/db/: __init__.py  commands.py
{{cookiecutter.app_name}}/{{cookiecutter.app_name}}/ext/toolbar/: __init__.py
{{cookiecutter.app_name}}/{{cookiecutter.app_name}}/static/css/: config.css  custom.css  global.css  responsive.css
{{cookiecutter.app_name}}/{{cookiecutter.app_name}}/static/js/: navbar.js
{{cookiecutter.app_name}}/{{cookiecutter.app_name}}/templates/: base.html  index.html  login.html
{{cookiecutter.app_name}}/{{cookiecutter.app_name}}/templates/errors/: 403.html  404.html  500.html
(+7 files in other folders)
